[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/imgs/hp-bar-bg-small.png" type="Texture" id=1]
[ext_resource path="res://assets/imgs/hp-bar-prog-small.png" type="Texture" id=2]
[ext_resource path="res://sfx/shade2.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/shade14.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/Enemies/Archer.gd" type="Script" id=5]
[ext_resource path="res://assets/Characters/Enemies/Archer.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_callMethodStartAttack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_callMethodFinishDead"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 199, 39 )
states/dead/node = SubResource( 8 )
states/dead/position = Vector2( 415, 59 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 267, 124 )
transitions = [ "idle", "attack", SubResource( 10 ), "attack", "idle", SubResource( 11 ), "idle", "dead", SubResource( 12 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 20 )

[node name="Archer" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 1040
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )
hframes = 8
vframes = 8
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="HPbar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 11.0
margin_bottom = -22.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="RayAttack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 296, 0 )

[node name="RayBackFlip" type="RayCast2D" parent="."]
position = Vector2( -40, 0 )
enabled = true
cast_to = Vector2( -179, 0 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
pitch_scale = 2.0

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
pitch_scale = 2.0

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
